# loomis-head-krita

./: .gitignore  README.md  build.py  loomis_head.desktop  pyproject.toml
.github/workflows/: release.yml
loomis_head/: __init__.py  euclid.py  geom_polyline.py  linalg.py  loomis_head_generator.py  loomis_head_plugin.py  trackball.py
loomis_head/ui/: LoomisDocker.ui
